--- a/index.html
+++ b/index.html
@@ -309,6 +309,9 @@
                     <button class="btn btn-accent" id="generate-summary-btn">
                         <span>📄</span> Generate Summary
                     </button>
+                    <button class="btn btn-info" id="generate-research-paper-btn"> 
+                        <span>📚</span> Generate Research Paper
+                    </button>
                 </div>
             </div>
         </section>
