--- a/index.html
+++ b/index.html
@@ -313,6 +313,9 @@
     <button class="btn btn-secondary" id="generate-project-file-btn"> 
         <span>📁</span> Generate Project File
     </button>
+    <button class="btn btn-warning" id="start-convert-btn"> 
+        <span>📝</span> Convert/Edit File
+    </button>
     <button class="btn btn-accent" id="generate-summary-btn">
         <span>📄</span> Generate Summary
     </button>
